kube/prod/service.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  name: delta-frontend-prod
  namespace: delta-prod
spec:
  selector:
    app: delta-frontend-prod
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5173
  type: ClusterIP
